Updating for the period 2023-2 and changing all the files to quarto

--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -56,7 +56,17 @@
 	month = oct,
 	year = {2020},
 	note = {Section: Negotiation Skills},
-	file = {Snapshot:/home/usuario/Zotero/storage/3M9E4SD3/listening-skills-for-maximum-success.html:text/html},
+	file = {Snapshot:C\:\\Users\\Usuario\\Zotero\\storage\\3M9E4SD3\\listening-skills-for-maximum-success.html:text/html},
+}
+
+@misc{program_on_negotiation_negotiation_2014,
+	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
+	shorttitle = {Negotiation {Role}-{Play}},
+	url = {https://www.youtube.com/watch?v=oaOv_iXOvtY},
+	urldate = {2021-04-05},
+	author = {{Program on Negotiation}},
+	month = sep,
+	year = {2014},
 }
 
 @article{dimara_task-based_2020,
@@ -72,7 +82,7 @@
 	month = feb,
 	year = {2020},
 	pages = {1413--1432},
-	file = {Submitted Version:/home/usuario/Zotero/storage/7TRG3UHX/Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\7TRG3UHX\\Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf},
 }
 
 @article{simonson_choice_1992,
@@ -122,7 +132,7 @@
 	month = dec,
 	year = {2000},
 	pages = {995--1006},
-	file = {Full Text:/home/usuario/Zotero/storage/JM8GWI9L/Iyengar and Lepper - 2000 - When choice is demotivating Can one desire too mu.pdf:application/pdf},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\JM8GWI9L\\Iyengar and Lepper - 2000 - When choice is demotivating Can one desire too mu.pdf:application/pdf},
 }
 
 @misc{shonk_framing_2020,
@@ -136,7 +146,7 @@
 	month = jun,
 	year = {2020},
 	note = {Section: Business Negotiations},
-	file = {Snapshot:/home/usuario/Zotero/storage/5L7IBL3N/framing-in-negotiation.html:text/html},
+	file = {Snapshot:C\:\\Users\\Usuario\\Zotero\\storage\\5L7IBL3N\\framing-in-negotiation.html:text/html},
 }
 
 @article{tversky_framing_1981,
@@ -153,7 +163,7 @@
 	month = jan,
 	year = {1981},
 	pages = {453--458},
-	file = {Submitted Version:/home/usuario/Zotero/storage/7T6RMMEW/Tversky and Kahneman - 1981 - The framing of decisions and the psychology of cho.pdf:application/pdf},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\7T6RMMEW\\Tversky and Kahneman - 1981 - The framing of decisions and the psychology of cho.pdf:application/pdf},
 }
 
 @book{goffman_frame_1986,
@@ -206,7 +216,7 @@
 	month = feb,
 	year = {2013},
 	pages = {e56126},
-	file = {Full Text:/home/usuario/Zotero/storage/JL5MJ5MU/Zeman et al. - 2013 - The Müller-Lyer Illusion in a Computational Model .pdf:application/pdf},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\JL5MJ5MU\\Zeman et al. - 2013 - The Müller-Lyer Illusion in a Computational Model .pdf:application/pdf},
 }
 
 @misc{adelson_checkershadow_1995,
@@ -216,7 +226,7 @@
 	urldate = {2020-10-20},
 	author = {Adelson, Edward H.},
 	year = {1995},
-	file = {Checkershadow Illusion:/home/usuario/Zotero/storage/6MI2BF9J/checkershadow.html:text/html},
+	file = {Checkershadow Illusion:C\:\\Users\\Usuario\\Zotero\\storage\\6MI2BF9J\\checkershadow.html:text/html},
 }
 
 @article{rackham_effective_1978,
@@ -253,7 +263,7 @@
 	pages = {6--11},
 }
 
-@misc{program_on_negotiation_negotiation_2014,
+@misc{program_on_negotiation_negotiation_2014-1,
 	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
 	shorttitle = {Negotiation {Role}-{Play}},
 	url = {https://www.youtube.com/watch?v=O2d6XuDm-ok&feature=emb_title},
@@ -292,7 +302,7 @@
 	month = sep,
 	year = {2003},
 	note = {Last Modified: 2017-02-28T14:57-07:00},
-	file = {Snapshot:/home/usuario/Zotero/storage/X9FM2BRV/creating-value.html:text/html},
+	file = {Snapshot:C\:\\Users\\Usuario\\Zotero\\storage\\X9FM2BRV\\creating-value.html:text/html},
 }
 
 @techreport{program_of_negotiation_batna_2012,
@@ -306,7 +316,7 @@
 
 @misc{magic_markers_como_2018,
 	title = {¿{Cómo} negociar bien?},
-	url = {https://www.youtube.com/watch?v=CnF26cfIfQM&t=173s},
+	url = {https://youtu.be/CnF26cfIfQM},
 	language = {Spanish},
 	urldate = {2020-09-23},
 	author = {{Magic Markers}},
@@ -324,12 +334,9 @@
 	keywords = {Negotiation in business, Negotiation},
 }
 
-@misc{program_on_negotiation_negotiation_2014-1,
-	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
-	shorttitle = {Negotiation {Role}-{Play}},
-	url = {https://www.youtube.com/watch?v=oaOv_iXOvtY},
-	urldate = {2021-04-05},
-	author = {{Program on Negotiation}},
-	month = sep,
-	year = {2014},
+@misc{maechler_cluster_2022,
+	title = {cluster: {Cluster} {Analysis} {Basics} and {Extensions}},
+	url = {https://CRAN.R-project.org/package=cluster},
+	author = {Maechler, Martin and Rousseeuw, Peter and Struyf, Anja and Hubert, Mia and Hornik, Kurt},
+	year = {2022},
 }
