--- a/000_syllabus_conflict_neg_2024_1.qmd
+++ b/000_syllabus_conflict_neg_2024_1.qmd
@@ -136,8 +136,8 @@ tibble(Week = c("1","2","3", "3", "4", "5", "6", "6", "7", "8", "9", "9"),
     -   **Questionnaire 1 Opening**
         -   **Opening time**: 00:00 hours
         -   **Prerequisites**:
-            -   Read and review [@lewicki_essentials_2016, Chapters 1 & 2]
-            
+            -   Read and review [@lewicki_essentials_2016, Chapters 1, 2]
+
 -   April 9
 
     -   **Virtual meeting Strategy and Tactics of Distributive Bargaining**
@@ -186,7 +186,7 @@ tibble(Week = c("1","2","3", "3", "4", "5", "6", "6", "7", "8", "9", "9"),
     -   **Questionnaire 2 Opening**
         -   **Opening time**: 00:00 hours
         -   **Prerequisites**:
-            -   Read and review [@lewicki_essentials_2016, Chapters 4 & 6]
+            -   Read and review [@lewicki_essentials_2016, Chapters 4, 6]
 
 -   April 23
 
@@ -244,7 +244,7 @@ tibble(Week = c("1","2","3", "3", "4", "5", "6", "6", "7", "8", "9", "9"),
     -   **Questionnaire 3 Opening**
         -   **Opening time**: 00:00 hours
         -   **Prerequisites**:
-            -   Read and review [@lewicki_essentials_2016, Chapters 8 & 5]
+            -   Read and review [@lewicki_essentials_2016, Chapters 8, 5]
 
 -   May 14
 
