--- a/001_nature_neg.qmd
+++ b/001_nature_neg.qmd
@@ -1,7 +1,10 @@
 ---
 title: "The Nature of Negotiation"
 author: "Luis Francisco Gomez Lopez"
-date: 2023-07-14
+date: 2024-01-27
+execute: 
+  echo: false
+  warning: false
 format:
   beamer:
     colortheme: dolphin
@@ -28,15 +31,7 @@ format:
 bibliography: conflict_neg.bib
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo      = FALSE, 
-                      warning   = FALSE, 
-                      message   = FALSE,
-                      fig.align = "center")
-```
-
 ```{r libraries}
-
 library(tidyverse)
 library(tidyquant)
 ```
@@ -71,7 +66,7 @@ Understand the definition of negotiation, the elements in general of this proces
 
 - Definition of negotiation that is going to be adopted in the course:
 
-    + " *a form of __decision making__ in which two or more parties talk with one another in an effort to __resolve their opposing interests__.*" [@lewicki_essentials_2016, Chapter 1, p 3]
+    + " *a form of __decision making__ in which two or more parties talk with one another in an effort to __resolve their opposing interests__.*" [@lewicki_essentials_2016, Chapter 1, p. 3]
     
     + Also check out in the __Links of interest__ the video
     
@@ -154,8 +149,8 @@ Understand the definition of negotiation, the elements in general of this proces
     
 # Conflict
 
-```{r, out.width="90%"}
-
+```{r }
+#| out-width: 90%
 # Data
 conflic_diag <- tibble(Dimension   = rep(c("Simmetry of conflict",
                            "Involment of third parties",
@@ -232,7 +227,7 @@ conflic_diag %>%
 
 - To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[tidyquant](https://CRAN.R-project.org/package=tidyquant)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[tidyquant](https://CRAN.R-project.org/package=tidyquant)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
 
 - To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
 
