--- a/003_stra_tac_integra_round_1.qmd
+++ b/003_stra_tac_integra_round_1.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Strategy and Tactics of Integrative Negotiation and Three-Party Coalition Exercise Round 1"
 author: "Luis Francisco Gomez Lopez"
-date:  2023-07-14
+date: 2024-01-27
+execute: 
+  echo: false
+  warning: false
 format:
   beamer:
     colortheme: dolphin
@@ -9,6 +12,7 @@ format:
     theme: AnnArbor
     link-citations: true
     linkcolor: blue
+    fig-align: center
     include-in-header:
       - text: |
           \usepackage{booktabs}
@@ -29,15 +33,7 @@ format:
 bibliography: conflict_neg.bib
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo      = FALSE, 
-                      warning   = FALSE, 
-                      message   = FALSE,
-                      fig.align = "center")
-```
-
 ```{r libraries}
-
 library(tidyverse)
 library(knitr)
 library(kableExtra)
@@ -209,10 +205,9 @@ tibble(Group  = c("A", "B", "C"),
 
 # Overview of the integrative negotiation process
 
-- Creating/Claiming Value and the Pareto Efficient Frontier [@lewicki_essentials_2016, p 64]
-
-```{r, out.width="75%"}
-
+```{r }
+#| out-width: 80%
+#| fig-cap: Creating/Claiming Value and the Pareto Efficient Frontier [@lewicki_essentials_2016, p 64]
 ggplot(data = tibble(x = c( 1, -1, -1, 0, 0, 4, 2.4),
                      y = c(-1,  1, -1, 0, 4, 0, 2.4))) +
     geom_point(aes(x = x, y = y),
@@ -333,7 +328,7 @@ ggplot(data = tibble(x = c( 1, -1, -1, 0, 0, 4, 2.4),
 
 - To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[tidyquant](https://CRAN.R-project.org/package=tidyquant)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[tidyquant](https://CRAN.R-project.org/package=tidyquant)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
 
 - To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
 
