--- a/004_stra_plan.qmd
+++ b/004_stra_plan.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Negotiation: Strategy and Planning"
 author: "Luis Francisco Gomez Lopez"
-date: 2023-07-14
+date: 2024-01-27
+execute: 
+  echo: false
+  warning: false
 format:
   beamer:
     colortheme: dolphin
@@ -9,6 +12,7 @@ format:
     theme: AnnArbor
     link-citations: true
     linkcolor: blue
+    fig-align: center
     include-in-header:
       - text: |
           \usepackage{booktabs}
@@ -29,15 +33,7 @@ format:
 bibliography: conflict_neg.bib
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo      = FALSE, 
-                      warning   = FALSE, 
-                      message   = FALSE,
-                      fig.align = "center")
-```
-
 ```{r libraries}
-
 library(DiagrammeR)
 library(tufte)
 ```
@@ -102,9 +98,9 @@ Understand and explore the main elements of the negotiation strategy, the proces
 
 # Key steps in the planning process
 
-- Relationship between key steps in the planning Process [@lewicki_essentials_2016, Chapter 4, p 90]
-
-```{r, out.width="90%", dev='png'}
+```{r }
+#| out-width: 90%
+#| fig-cap: Relationship between key steps in the planning Process [@lewicki_essentials_2016, Chapter 4, p 90]
 
 grViz("
 digraph boxes_and_circles {
@@ -164,9 +160,9 @@ digraph boxes_and_circles {
 
 # Strategies
 
-- Different engagement strategies in a negotiation context[^6]
-
-```{r, out.width="85%", dev='png'}
+```{r }
+#| out-width: 85%
+#| fig-cap: Different engagement strategies in a negotiation context  [@lewicki_essentials_2016, Chapter 4, p 94, Table 4.1]
 
 grViz("
 digraph boxes_and_circles {
@@ -190,14 +186,12 @@ digraph boxes_and_circles {
 ")
 ```
 
-[^6]: Check out [@lewicki_essentials_2016, Chapter 4, p 94, Table 4.1] for more details
-
 # Planning process
 
-- Key steps in the planning process [@lewicki_essentials_2016, Chapter 4, p 96-112]
-
-```{r, out.width="90%", dev='png'}
-
+```{r }
+#| out-width: 90%
+#| fig-cap: Key steps in the planning process [@lewicki_essentials_2016, Chapter 4, p 96-112]
+ 
 grViz("
 digraph boxes_and_circles {
 
@@ -249,9 +243,9 @@ digraph boxes_and_circles {
 
 # Planning process
 
-- Key steps in the planning process [@lewicki_essentials_2016, Chapter 4, p 96-112]
-
-```{r, out.width="90%", dev='png'}
+```{r }
+#| out-width: 90%
+#| fig-cap: Key steps in the planning process [@lewicki_essentials_2016, Chapter 4, p 96-112]
 
 grViz("
 digraph boxes_and_circles {
@@ -308,7 +302,7 @@ digraph boxes_and_circles {
 
 - To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__ and the authors and maintainers of the packages __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[tufte](https://CRAN.R-project.org/package=tufte)__, and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[tufte](https://CRAN.R-project.org/package=tufte)__, and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
 
 - To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
 
