--- a/006_commu.qmd
+++ b/006_commu.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Communication and Three-Party Coalition Exercise Round 2"
 author: "Luis Francisco Gomez Lopez"
-date: 2023-07-14
+date: 2024-01-27
+execute: 
+  echo: false
+  warning: false
 format:
   beamer:
     colortheme: dolphin
@@ -9,6 +12,7 @@ format:
     theme: AnnArbor
     link-citations: true
     linkcolor: blue
+    fig-align: center
     include-in-header:
       - text: |
           \usepackage{booktabs}
@@ -28,13 +32,6 @@ format:
           \usepackage{fontawesome5}
 bibliography: conflict_neg.bib
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo      = FALSE, 
-                      warning   = FALSE, 
-                      message   = FALSE,
-                      fig.align = "center")
-```
 
 ```{r libraries}
 
@@ -182,7 +179,9 @@ tibble(Group  = c("A", "B", "C"),
         
 # What Is Communicated during Negotiation?
 
-```{r fig_1, out.width="100%", dev='png'}
+```{r }
+#| out-width: 60%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -249,7 +248,9 @@ grViz(diagram = '
 
 # How People Communicate in Negotiation
 
-```{r fig_2, out.width="100%", dev='png'}
+```{r }
+#| out-width: 100%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -308,7 +309,9 @@ grViz(diagram = '
 
 # How to Improve Communication in Negotiation[^2]
 
-```{r fig_3, out.width="90%", dev='png'}
+```{r }
+#| out-width: 90%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -353,7 +356,7 @@ grViz(diagram = '
 
 - To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
 
 - To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
 
