--- a/007_power.qmd
+++ b/007_power.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Finding and Using Negotiation Power"
 author: "Luis Francisco Gomez Lopez"
-date: 2023-07-14
+date: 2024-01-27
+execute: 
+  echo: false
+  warning: false
 format:
   beamer:
     colortheme: dolphin
@@ -9,6 +12,7 @@ format:
     theme: AnnArbor
     link-citations: true
     linkcolor: blue
+    fig-align: center
     include-in-header:
       - text: |
           \usepackage{booktabs}
@@ -29,15 +33,7 @@ format:
 bibliography: conflict_neg.bib
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo      = FALSE, 
-                      warning   = FALSE, 
-                      message   = FALSE,
-                      fig.align = "center")
-```
-
 ```{r libraries}
-
 library(tidyverse)
 library(DiagrammeR)
 ```
@@ -76,7 +72,9 @@ Understand the role of power and the different sources from which this element a
 
 - Perspectives about power[^1]
 
-```{r fig_1, out.width="90%", dev='png'}
+```{r }
+#| out-width: 90%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -113,7 +111,9 @@ grViz(diagram = '
 
 # Sources of power in a negotiation
 
-```{r fig_2, out.width="100%", dev='png'}
+```{r }
+#| out-width: 80%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -171,7 +171,9 @@ grViz(diagram = '
 
 # Sources of power in a negotiation
 
-```{r fig_3, out.width="100%", dev='png'}
+```{r }
+#| out-width: 75%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -228,7 +230,7 @@ grViz(diagram = '
 
 - To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
 
 - To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
 
