--- a/008_ethics.qmd
+++ b/008_ethics.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Ethics in Negotiation"
 author: "Luis Francisco Gomez Lopez"
-date: 2023-07-14
+date: 2024-01-28
+execute: 
+  echo: false
+  warning: false
 format:
   beamer:
     colortheme: dolphin
@@ -9,6 +12,7 @@ format:
     theme: AnnArbor
     link-citations: true
     linkcolor: blue
+    fig-align: center
     include-in-header:
       - text: |
           \usepackage{booktabs}
@@ -29,15 +33,7 @@ format:
 bibliography: conflict_neg.bib
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo      = FALSE, 
-                      warning   = FALSE, 
-                      message   = FALSE,
-                      fig.align = "center")
-```
-
 ```{r libraries}
-
 library(tidyverse)
 library(DiagrammeR)
 ```
@@ -79,7 +75,9 @@ Explore and understand the ethical standards commonly accepted in a negotiation 
 
 - To evaluate how ethical the strategies and tactics are in a negotiation, 4 standards can be used [@lewicki_essentials_2016, Chapter 5, p 118]:
 
-```{r fig_1, out.width="90%", dev='png'}
+```{r }
+#| out-width: 90%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -146,7 +144,8 @@ grViz(diagram = '
 
 - Types of ethically ambiguous tactics
 
-```{r fig_2, out.width="90%", dev='png'}
+```{r }
+#| out-width: 100%
 
 grViz(diagram = '
       
@@ -206,7 +205,9 @@ grViz(diagram = '
 
 # Motives and consequences of using deceptive tactics
 
-```{r fig_3, out.width="100%", dev='png'}
+```{r }
+#| out-width: 60%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -257,7 +258,9 @@ grViz(diagram = '
 
 # Motives and consequences of using deceptive tactics
 
-```{r fig_4, out.width="100%", dev='png'}
+```{r }
+#| out-width: 70%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -327,7 +330,9 @@ grViz(diagram = '
 
 # Dealing with the use of deceptive tactics by the counterpart
 
-```{r fig_5, out.width="95%", dev='png'}
+```{r }
+#| out-width: 45%
+#| fig-align: center
 
 grViz(diagram = '
       
@@ -384,7 +389,7 @@ grViz(diagram = '
 
 - To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
 
 - To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
 
